REST client fixed, authentication added

--- a/REST-client/src/main/resources/templates/index.html
+++ b/REST-client/src/main/resources/templates/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>REST Java client</title>
 </head>
 <body>
 
 <h1>Customer:</h1>
-<div>Customer ID: ${customerId}</div>
-<div>Fist name: ${firstName}</div>
-<div>Last name: ${lastName}</div>
-<div>Age: ${age}</div>
+<div>Customer ID: [[${customerId}]]</div>
+<div>Fist name: [[${firstName}]]</div>
+<div>Last name: [[${lastName}]]</div>
+<div>Age: [[${age}]]</div>
 
 </body>
 </html>
